--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.5",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "ztree": "^3.5.24"
   },
   "engines": {
     "node": ">= 4.0.0",
